# learning-compiler

./: .gitignore
cpplox/: .clang-format  CMakeLists.txt  chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  compiler_common.cpp  debug.cpp  debug.h  ffi.h  main.cpp  memory.cpp  memory.h  object.cpp  object.h  opcode.h  parse_rule.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  table.cpp  table.h  value.cpp  value.h  vm.cpp  vm.h
cpplox/.cache/clangd/index/: chunk.cpp.B2CF0C0828CE4A2D.idx  chunk.h.D3463AEDCD7D317A.idx  common.h.81F5E4A8C43FA2FE.idx  debug.cpp.F0607C7BEE36F77B.idx  debug.h.65AB6DADBCD8E8B2.idx  main.cpp.12D21EA98A34C073.idx  memory.cpp.47ABE54BA0DFB163.idx  memory.h.523428AC3BA0D3D9.idx  value.cpp.8BAD426D10751FF5.idx  value.h.A7F5E892E97F6966.idx  vm.cpp.E531B8700003E59F.idx  vm.h.844B8FBEBF8104AB.idx
cpplox/test/: fun.lox
rlox/: Cargo.toml
rlox/src/: parser.rs  value.rs
rlox/src/expr/: visitor.rs
rlox/src/interpreter/: ffi.rs
rlox/src/stmt/: statement.rs  visitor.rs
src/: expr.rs  main.rs  parser.rs  scanner.rs  token.rs  value.rs
src/expr/: ast_printer_visitor.rs  expression.rs  mod.rs  rnp_printer_visitor.rs  visitor.rs
src/interpreter/: environment.rs  ffi.rs  mod.rs
src/stmt/: mod.rs  statement.rs  visitor.rs
